--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui": "^2.2.13",
-    "sequelize": "^4.3.1"
+    "sequelize": "^4.3.1",
+    "tone": "^0.11.11"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.9.0",
